--- a/vote/index.html
+++ b/vote/index.html
@@ -130,7 +130,7 @@ Soon</a>
                 </li>
 
                 <li class="pull-right">
-                    <a href="terms.html">Terms</a>
+                    <a href="/terms">Terms</a>
                 </li>
 
             </ul>
