--- a/comingsoon/index.html
+++ b/comingsoon/index.html
@@ -80,7 +80,7 @@ Soon</a>
                 </li>
 
                 <li class="pull-right">
-                    <a href="terms.html">Terms</a>
+                    <a href="/terms">Terms</a>
                 </li>
 
             </ul>
