--- a/help/index.html
+++ b/help/index.html
@@ -168,7 +168,7 @@ Soon</a>
                 </li>
 
                 <li class="pull-right">
-                    <a href="terms.html">Terms</a>
+                    <a href="/terms">Terms</a>
                 </li>
 
             </ul>
