--- a/comingsoon/index.html
+++ b/comingsoon/index.html
@@ -38,7 +38,7 @@ Created by Jerred Shepherd (RiotShielder) -->
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand accent" href="">Patriam</a>
+                        <a class="navbar-brand accent" href="/">Patriam</a>
                     </div>
                     <div class="navbar-collapse collapse">
                         <ul class="nav navbar-nav">
