change index and staff

--- a/index.html
+++ b/index.html
@@ -88,19 +88,19 @@ Soon</a>
             <div class="col-lg-4">
                 <img class="img-circle img-border" src="img/marketing/1.jpg" height="150" width="150" alt="Marketing Image 1">
                 <h2>Discord</h2>
-                <p>Our Discord Server is not just for Minecraft. With chat games, fun bots, Voice Chats, Other Game Talk, MEMES, anime and a lot more: we know you'll fit right in if Minecraft isn't your strong suit.
+                <p>Our Discord Server is not just for Minecraft. We have fun economy bots for you to use, we have memes, voice-chats, and more! With a friendly community, friendly staff, and more: we will make sure you're right at home if Minecraft isn't your strong suit.
                 </p>
             </div>
             <div class="col-lg-4">
                 <img class="img-circle img-border"" src="img/marketing/2.jpg" height="150" width="150" alt="Marketing Image 2">
                 <h2>Minecraft</h2>
-                <p>Our Patriam is Semi-Vanilla. This means we can include PvP, Claiming, Shops, Grief Inspection, End Resets, TPA, and much more. With a endless worldborder you will never run out of space to make your megabase!
+                <p>Our server is Semi-Vanilla. This means we can include PvP, Claiming, Shops, Grief Inspection, End Resets, TPA, and much more. With a endless worldborder you will never run out of space to make your megabase!
                 </p>
             </div>
             <div class="col-lg-4">
                 <img class="img-circle img-border"" src="img/marketing/3.jpg" height="150" width="150" alt="Marketing Image 3">
                 <h2>Our Host</h2>
-                <p>We are proudly powered by Xenyth Cloud. On 8GB RAM for our Survival server, 100GB Disk, and 10TB Bandwith. We assure there will be little to no lag as you experience our Patriam in the fullest potential.
+                <p>We are proudly powered by Xenyth Cloud. On 8GB RAM for our Survival server, 100GB Disk, and 10TB Bandwith. We assure there will be little to no lag as you experience our server in the fullest potential.
                 </p>
             </div>
         </div>
