--- a/staff/index.html
+++ b/staff/index.html
@@ -87,9 +87,9 @@ Soon</a>
         <div class="row">
 
             <div class="col-md-2 text-center col-md-offset-2">
-                <img src="http://cravatar.eu/avatar/sukett/100.png" class="staff-img img-rounded" height="100" width="100" alt="">
+                <img src="http://cravatar.eu/avatar/CloveyLu/100.png" class="staff-img img-rounded" height="100" width="100" alt="">
                 <hr>
-                <h3>Lustifed<br><small>Manager</small></h3>
+                <h3>CloveyLu<br><small>Manager</small></h3>
             </div>
             <div class="col-md-2 text-center">
                 <img src="http://cravatar.eu/avatar/Steve/100.png" class="staff-img img-rounded" height="100" width="100" alt="">
