fixing css loading issues

--- a/staff/index.html
+++ b/staff/index.html
@@ -16,11 +16,11 @@ Created by Jerred Shepherd (RiotShielder) -->
     <meta name="author" content="Jerred Shepherd">
     <link rel="shortcut icon" href="img/favicon.ico">
     
-    <link href="http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,600,300,700" rel='stylesheet' type='text/css'>
+    <link href="://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet" type="text/css">
+    <link href="://fonts.googleapis.com/css?family=Open+Sans:400,600,300,700" rel='stylesheet' type='text/css'>
 
-    <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <link href="://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="css/custom.css" rel="stylesheet">
 </head>
 
@@ -72,12 +72,12 @@ Soon</a>
         <div class="row">
 
             <div class="col-md-2 text-center col-md-offset-4">
-                <img src="http://cravatar.eu/avatar/Azrian_/100.png" class="staff-img img-rounded" height="100" width="100" alt="">
+                <img src="https://cravatar.eu/avatar/Azrian_/100.png" class="staff-img img-rounded" height="100" width="100" alt="">
                 <hr>
                 <h3>Azrian_<br><small>Owner</small></h3>
             </div>
             <div class="col-md-2 text-center">
-                <img src="http://cravatar.eu/avatar/Omar_Szn/100.png" class="staff-img img-rounded" height="100" width="100" alt="">
+                <img src="https://cravatar.eu/avatar/Omar_Szn/100.png" class="staff-img img-rounded" height="100" width="100" alt="">
                 <hr>
                 <h3>Omar_Szn<br><small>Owner</small></h3>
             </div>
@@ -87,22 +87,22 @@ Soon</a>
         <div class="row">
 
             <div class="col-md-2 text-center col-md-offset-2">
-                <img src="http://cravatar.eu/avatar/CloveyLu/100.png" class="staff-img img-rounded" height="100" width="100" alt="">
+                <img src="https://cravatar.eu/avatar/CloveyLu/100.png" class="staff-img img-rounded" height="100" width="100" alt="">
                 <hr>
                 <h3>CloveyLu<br><small>Manager</small></h3>
             </div>
             <div class="col-md-2 text-center">
-                <img src="http://cravatar.eu/avatar/WhMonkey/100.png" class="staff-img img-rounded" height="100" width="100" alt="">
+                <img src="https://cravatar.eu/avatar/WhMonkey/100.png" class="staff-img img-rounded" height="100" width="100" alt="">
                 <hr>
                 <h3>WhMonkey<br><small>Moderator</small></h3>
             </div>
             <div class="col-md-2 text-center">
-                <img src="http://cravatar.eu/avatar/Steve/100.png" class="staff-img img-rounded" height="100" width="100" alt="">
+                <img src="https://cravatar.eu/avatar/Steve/100.png" class="staff-img img-rounded" height="100" width="100" alt="">
                 <hr>
                 <h3>Steve<br><small>Admin</small></h3>
             </div>
             <div class="col-md-2 text-center">
-                <img src="http://cravatar.eu/avatar/Steve/100.png" class="staff-img img-rounded" height="100" width="100" alt="">
+                <img src="https://cravatar.eu/avatar/Steve/100.png" class="staff-img img-rounded" height="100" width="100" alt="">
                 <hr>
                 <h3>Steve<br><small>Admin</small></h3>
             </div>
@@ -112,27 +112,27 @@ Soon</a>
         <div class="row">
 
             <div class="col-md-2 text-center col-md-offset-1">
-                <img src="http://cravatar.eu/avatar/Steve/100.png" class="staff-img img-rounded" height="100" width="100" alt="">
+                <img src="https://cravatar.eu/avatar/Steve/100.png" class="staff-img img-rounded" height="100" width="100" alt="">
                 <hr>
                 <h3>Steve<br><small>Head Mod</small></h3>
             </div>
             <div class="col-md-2 text-center">
-                <img src="http://cravatar.eu/avatar/Steve/100.png" class="staff-img img-rounded" height="100" width="100" alt="">
+                <img src="https://cravatar.eu/avatar/Steve/100.png" class="staff-img img-rounded" height="100" width="100" alt="">
                 <hr>
                 <h3>Steve<br><small>Mod</small></h3>
             </div>
             <div class="col-md-2 text-center">
-                <img src="http://cravatar.eu/avatar/Steve/100.png" class="staff-img img-rounded" height="100" width="100" alt="">
+                <img src="https://cravatar.eu/avatar/Steve/100.png" class="staff-img img-rounded" height="100" width="100" alt="">
                 <hr>
                 <h3>Steve<br><small>Mod</small></h3>
             </div>
             <div class="col-md-2 text-center">
-                <img src="http://cravatar.eu/avatar/Steve/100.png" class="staff-img img-rounded" height="100" width="100" alt="">
+                <img src="https://cravatar.eu/avatar/Steve/100.png" class="staff-img img-rounded" height="100" width="100" alt="">
                 <hr>
                 <h3>Steve<br><small>Mod</small></h3>
             </div>
             <div class="col-md-2 text-center">
-                <img src="http://cravatar.eu/avatar/Steve/100.png" class="staff-img img-rounded" height="100" width="100" alt="">
+                <img src="https://cravatar.eu/avatar/Steve/100.png" class="staff-img img-rounded" height="100" width="100" alt="">
                 <hr>
                 <h3>Steve<br><small>Mod</small></h3>
             </div>
@@ -159,9 +159,9 @@ Soon</a>
             <br>
         </div>
     </div>
-<script src="http://code.jquery.com/jquery-1.11.2.min.js" type="text/javascript">
+<script src="https://code.jquery.com/jquery-1.11.2.min.js" type="text/javascript">
 </script>
-<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" type="text/javascript">
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" type="text/javascript">
 </script>
 </body>
 
