discord works, adding to others

--- a/comingsoon/index.html
+++ b/comingsoon/index.html
@@ -51,6 +51,8 @@ Created by Jerred Shepherd (RiotShielder) -->
                             <li><a href="/comingsoon"><i class="fa fa-check-square-o"></i> Vote</a>
                             </li>
                             <li><a href="/comingsoon"><i class="fa fa-shopping-cart"></i> Shop</a>
+                            </li>
+                            <li><a href="https://discord.gg/RuUQZrQ5xk"><i class="fa fa-comments"></i> Discord</a>
                         </ul>
                             </li>
                             <a class="btn btn-info navbar-btn navbar-right hidden-sm hidden-xs">IP:
