--- a/shop/index.html
+++ b/shop/index.html
@@ -52,6 +52,8 @@ Created by Jerred Shepherd (RiotShielder) -->
                         </li>
                         <li><a href="/comingsoon"><i class="fa fa-shopping-cart"></i> Shop</a>
                         </li>
+                        <li><a href="https://discord.gg/RuUQZrQ5xk"><i class="fa fa-comments"></i> Discord</a>
+                        </li>
                     </ul>
                         </li>
                         <a class="btn btn-info navbar-btn navbar-right hidden-sm hidden-xs">IP:
