--- a/404.html
+++ b/404.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <!-- Metadata, Stylesheet, Title -->
 
 <!-- Front Version 7.2
 Created by Jerred Shepherd (RiotShielder) -->
+<html>
+<head>
+<style>
+body {
+  background-color: black;
+}
+</style>
+</head>
 
 <head>
     <title>404 | Patriam</title>
