--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ Created by Jerred Shepherd (RiotShielder) -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Patriam">
+    <meta name="description" content="A Minecraft Server dedicated to deliver the best experience possible to players of all ages. We strive to fulfill your needs when it comes to Minecraft, and we make sure we do not disappoint you with our server!">
     <meta name="author" content="Jerred Shepherd">
     <link rel="shortcut icon" href="img/favicon.ico">
     
