--- a/terms/index.html
+++ b/terms/index.html
@@ -12,7 +12,7 @@ Created by Jerred Shepherd (RiotShielder) -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Patriam">
+    <meta name="description" content="Our Website's Terms of Conditions">
     <meta name="author" content="Jerred Shepherd">
     <link rel="shortcut icon" href="img/favicon.ico">
     
@@ -149,7 +149,7 @@ Soon</a>
 </h3>
 
             <p>
-                Any claim relating to Patriam's web site shall be governed by the laws of the State of Texas without regard to its conflict of law provisions.
+                Any claim relating to Patriam's web site shall be governed by the laws of the State of Massachusetts without regard to its conflict of law provisions.
             </p>
 
             <p>
