--- a/vote/index.html
+++ b/vote/index.html
@@ -12,7 +12,7 @@ Created by Jerred Shepherd (RiotShielder) -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Patriam">
+    <meta name="description" content="Vote here to gain rewards in our server">
     <meta name="author" content="Jerred Shepherd">
     <link rel="shortcut icon" href="img/favicon.ico">
     
