staff panel redirect at bottom

--- a/staff/index.html
+++ b/staff/index.html
@@ -149,7 +149,7 @@ Soon</a>
         <div class="container hidden-xs">
             <hr>
             <ul class='nav nav-pills'>
-                <li class='pull-left'><a href="http://shepherdjerred.com/">Design by Jerred Shepherd
+                <li class='pull-left'><a href="https://www.patriam.xyz/panel">Staff Server Panel
   </a>
                 </li>
 
