update homepage desc

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ Soon</a>
             <div class="col-md-6 col-md-offset-3">
                 <h1 class="home-title">Patriam</h1>
 
-                <p class="home-desc">A Community Server dedicated to Minecraft and Discord. Join us on Discord or play on our Semi-Survival Patriam. Minecraft including claiming, PvP, shops, End Resets, and more. Our Discord includes fun bots, chat channels, VCs, self roles, and more.</p>
+                <p class="home-desc">A Minecraft Server dedicated to deliver the best experience possible to players of all ages. We strive to fulfill your needs when it comes to Minecraft, and we make sure we do not disappoint you with our server!</p>
                 </p>
             </div>
         </div>
