--- a/staff/index.html
+++ b/staff/index.html
@@ -79,9 +79,9 @@ Soon</a>
                 <h3>Azrian_<br><small>Owner</small></h3>
             </div>
             <div class="col-md-2 text-center">
-                <img src="https://cravatar.eu/avatar/Omar_Szn/100.png" class="staff-img img-rounded" height="100" width="100" alt="">
+                <img src="https://cravatar.eu/avatar/Steve/100.png" class="staff-img img-rounded" height="100" width="100" alt="">
                 <hr>
-                <h3>Omar_Szn<br><small>Owner</small></h3>
+                <h3>Raf<br><small>Owner</small></h3>
             </div>
 
         </div>
@@ -94,21 +94,41 @@ Soon</a>
                 <h3>CloveyLu<br><small>Manager</small></h3>
             </div>
             <div class="col-md-2 text-center">
-                <img src="https://cravatar.eu/avatar/WhMonkey/100.png" class="staff-img img-rounded" height="100" width="100" alt="">
+                <img src="https://cravatar.eu/avatar/Omar_Szn/100.png" class="staff-img img-rounded" height="100" width="100" alt="">
                 <hr>
-                <h3>WhMonkey<br><small>Moderator</small></h3>
+                <h3>Omar_Szn<br><small>Head of Staff</small></h3>
             </div>
             <div class="col-md-2 text-center">
                 <img src="https://cravatar.eu/avatar/Steve/100.png" class="staff-img img-rounded" height="100" width="100" alt="">
                 <hr>
-                <h3>Steve<br><small>Admin</small></h3>
+                <h3>Steve<br><small>Administrator</small></h3>
             </div>
             <div class="col-md-2 text-center">
                 <img src="https://cravatar.eu/avatar/Steve/100.png" class="staff-img img-rounded" height="100" width="100" alt="">
                 <hr>
-                <h3>Steve<br><small>Admin</small></h3>
+                <h3>Steve<br><small>Administrator</small></h3>
             </div>
 
+        </div>
+        <br>
+        <div class="row">
+
+            <div class="col-md-2 text-center col-md-offset-2">
+                <img src="https://cravatar.eu/avatar/CloveyLu/100.png" class="staff-img img-rounded" height="100" width="100" alt="">
+                <hr>
+                <h3>CloveyLu<br><small>Manager</small></h3>
+            </div>
+            <div class="col-md-2 text-center">
+                <img src="https://cravatar.eu/avatar/Omar_Szn/100.png" class="staff-img img-rounded" height="100" width="100" alt="">
+                <hr>
+                <h3>Omar_Szn<br><small>Head of Staff</small></h3>
+            </div>
+            <div class="col-md-2 text-center">
+                <img src="https://cravatar.eu/avatar/Steve/100.png" class="staff-img img-rounded" height="100" width="100" alt="">
+                <hr>
+                <h3>Steve<br><small>Administrator</small></h3>
+            </div>
+            
         </div>
         <br>
         <div class="row">
@@ -116,27 +136,27 @@ Soon</a>
             <div class="col-md-2 text-center col-md-offset-1">
                 <img src="https://cravatar.eu/avatar/Steve/100.png" class="staff-img img-rounded" height="100" width="100" alt="">
                 <hr>
-                <h3>Steve<br><small>Head Mod</small></h3>
+                <h3>Steve<br><small>Head Moderator</small></h3>
+            </div>
+            <div class="col-md-2 text-center">
+                <img src="https://cravatar.eu/avatar/WhMonkey/100.png" class="staff-img img-rounded" height="100" width="100" alt="">
+                <hr>
+                <h3>WhMonkey<br><small>Moderator</small></h3>
             </div>
             <div class="col-md-2 text-center">
                 <img src="https://cravatar.eu/avatar/Steve/100.png" class="staff-img img-rounded" height="100" width="100" alt="">
                 <hr>
-                <h3>Steve<br><small>Mod</small></h3>
+                <h3>Steve<br><small>Moderator</small></h3>
             </div>
             <div class="col-md-2 text-center">
                 <img src="https://cravatar.eu/avatar/Steve/100.png" class="staff-img img-rounded" height="100" width="100" alt="">
                 <hr>
-                <h3>Steve<br><small>Mod</small></h3>
+                <h3>Steve<br><small>Moderator</small></h3>
             </div>
             <div class="col-md-2 text-center">
                 <img src="https://cravatar.eu/avatar/Steve/100.png" class="staff-img img-rounded" height="100" width="100" alt="">
                 <hr>
-                <h3>Steve<br><small>Mod</small></h3>
-            </div>
-            <div class="col-md-2 text-center">
-                <img src="https://cravatar.eu/avatar/Steve/100.png" class="staff-img img-rounded" height="100" width="100" alt="">
-                <hr>
-                <h3>Steve<br><small>Mod</small></h3>
+                <h3>Steve<br><small>Moderator</small></h3>
             </div>
 
         </div>
