--- a/staff/index.html
+++ b/staff/index.html
@@ -79,7 +79,7 @@ Soon</a>
                 <h3>Azrian_<br><small>Owner</small></h3>
             </div>
             <div class="col-md-2 text-center">
-                <img src="https://cravatar.eu/avatar/Steve/100.png" class="staff-img img-rounded" height="100" width="100" alt="">
+                <img src="https://cravatar.eu/avatar/NotAShelf/100.png" class="staff-img img-rounded" height="100" width="100" alt="">
                 <hr>
                 <h3>Raf<br><small>Owner</small></h3>
             </div>
