adding head admin

--- a/staff/index.html
+++ b/staff/index.html
@@ -106,7 +106,7 @@ Soon</a>
             <div class="col-md-2 text-center col-md-offset-2">
                 <img src="https://cravatar.eu/avatar/Steve/100.png" class="staff-img img-rounded" height="100" width="100" alt="">
                 <hr>
-                <h3>Steve<br><small>Administrator</small></h3>
+                <h3>Steve<br><small>Head Administrator</small></h3>
             </div>
             <div class="col-md-2 text-center">
                 <img src="https://cravatar.eu/avatar/Steve/100.png" class="staff-img img-rounded" height="100" width="100" alt="">
