redid staff panel footer

--- a/panel/index.html
+++ b/panel/index.html
@@ -1,2 +1,2 @@
 <!DOCTYPE html>
-<meta http-equiv="refresh" content="0; url=https://panel.patriam.xyz/">
+<meta http-equiv="refresh" content="0; url=https://awau.moe/5SFtudV/">
