--- a/panel/index.html
+++ b/panel/index.html
@@ -1,2 +1,2 @@
 <!DOCTYPE html>
-<meta http-equiv="refresh" content="0; url=https://awau.moe/5SFtudV/">
+<meta http-equiv="refresh" content="0; url=https://awau.moe/7Qox8Zi">
