--- a/help/index.html
+++ b/help/index.html
@@ -72,6 +72,7 @@ Soon</a>
     </div>
 
     <div class="container">
+        <table class="table table-responsive">
             <thead>
                 <tr>
                     <th>Command</th>
