--- a/staff/index.html
+++ b/staff/index.html
@@ -29,10 +29,9 @@ Created by Jerred Shepherd (RiotShielder) -->
 <body>
     <div class="navbar-wrapper">
 
-        <div class="navbar navbar-default navbar-fixed navbar-static-top" role="navigation">
+        <div class="navbar navbar-default navbar-inverse navbar-fixed navbar-static-top" role="navigation">
             <div class="container">
                 <div class="navbar-header">
-                    <div class="navbar-dark">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                         <span class="sr-only">Toggle navigation</span>
                         <span class="icon-bar"></span>
