--- a/staff/index.html
+++ b/staff/index.html
@@ -79,9 +79,9 @@ Soon</a>
                 <h3>Azrian_<br><small>Owner</small></h3>
             </div>
             <div class="col-md-2 text-center">
-                <img src="https://cravatar.eu/avatar/NotAShelf/100.png" class="staff-img img-rounded" height="100" width="100" alt="">
+                <img src="https://cravatar.eu/avatar/Steve/100.png" class="staff-img img-rounded" height="100" width="100" alt="">
                 <hr>
-                <h3>Raf<br><small>Owner</small></h3>
+                <h3>Steve<br><small>Owner</small></h3>
             </div>
 
         </div>
@@ -94,9 +94,9 @@ Soon</a>
                 <h3>CloveyLu<br><small>Manager</small></h3>
             </div>
             <div class="col-md-2 text-center">
-                <img src="https://cravatar.eu/avatar/Omar_Szn/100.png" class="staff-img img-rounded" height="100" width="100" alt="">
+                <img src="https://cravatar.eu/avatar/Steve/100.png" class="staff-img img-rounded" height="100" width="100" alt="">
                 <hr>
-                <h3>Omar_Szn<br><small>Head of Staff</small></h3>
+                <h3>Steve<br><small>Head of Staff</small></h3>
             </div>
 
         </div>
